# cq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  afk-ralph.sh  progress.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: bin_frame.rs  cli.rs  input.rs  main.rs  output.rs  query.rs  schema.rs
tests/: integration_test.rs
tests/fixtures/: bad.did  schema1.did  schema2.did
tests/golden/: record_nat.candid
