[package]
name = "cq"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cq"
path = "src/main.rs"

[dependencies]
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
